Iterative Users for landing page upon new JWT, dynamic URL referencing

--- a/jwt-qr/templates/landing.html
+++ b/jwt-qr/templates/landing.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Welcome to the Secure Page</h1>
+    <p>You are logged in as: {{ user_id }}</p>
     <p>This page has automatically stored a secure token for you.</p>
 
     <script>
