idk final touches?

--- a/jwt-qr/templates/index.html
+++ b/jwt-qr/templates/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Authentication</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
-    />
+    <link rel="stylesheet" href="../static/style.css" />
   </head>
   <body>
     <h1>QR Code Authentication</h1>
     <button id="generateQRButton">Generate QR Code</button>
     <div id="qrContainer"></div>
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="../static/script.js"></script>
   </body>
 </html>
