--- a/ec2-server/public/assets/joystick.css
+++ b/ec2-server/public/assets/joystick.css
@@ -1,14 +1,19 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+body,
+html {
   margin: 0;
-  background: #000000;
+  padding: 0;
+  overflow: hidden;
+}
+
+a-scene {
+  width: 100vw;
+  height: 100vh;
 }
 
 #joystick-container {
-  position: relative;
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
   width: 200px;
   height: 200px;
   background: rgba(221, 221, 221, 0.5);
